[gd_scene load_steps=2 format=3 uid="uid://c1vreutbegnr7"]

[ext_resource type="Script" path="res://scenes/color_predictor/main.gd" id="1_5qnk2"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -652.0
offset_bottom = -348.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5qnk2")

[node name="GuessColor" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 196.0
offset_top = 49.0
offset_right = 246.0
offset_bottom = 99.0

[node name="LeftButton" type="Button" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 144.0
offset_right = 198.0
offset_bottom = 175.0
text = "White
"

[node name="RightButton" type="Button" parent="."]
layout_mode = 0
offset_left = 244.0
offset_top = 145.0
offset_right = 294.0
offset_bottom = 176.0
text = "Black
"

[node name="saveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 348.0
offset_top = 269.0
offset_right = 398.0
offset_bottom = 300.0
text = "Save
"

[node name="loadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 411.0
offset_top = 268.0
offset_right = 461.0
offset_bottom = 299.0
text = "Load
"

[node name="initTrainButton" type="Button" parent="."]
layout_mode = 0
offset_left = 261.0
offset_top = 269.0
offset_right = 339.0
offset_bottom = 300.0
text = "Pre Train
"

[node name="Guess" type="Label" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 217.0
offset_right = 242.0
offset_bottom = 240.0
text = "White"

[node name="R" type="Label" parent="."]
layout_mode = 0
offset_left = 396.0
offset_top = 39.0
offset_right = 436.0
offset_bottom = 62.0
text = "R: 0"

[node name="G" type="Label" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 91.0
offset_right = 435.0
offset_bottom = 114.0
text = "G: 0"

[node name="B" type="Label" parent="."]
layout_mode = 0
offset_left = 396.0
offset_top = 144.0
offset_right = 436.0
offset_bottom = 167.0
text = "B: 0"

[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="saveButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="saveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="loadButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="loadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="initTrainButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="initTrainButton" to="." method="_on_init_train_button_pressed"]
